Fixed: long scheduler name layout issue (fixes #43).

--- a/src/CrystalQuartz.Application.Client/app/main-header/index.less
+++ b/src/CrystalQuartz.Application.Client/app/main-header/index.less
@@ -44,6 +44,8 @@
 
 .scheduler-caption {
     width: 25%;
+    height: 100%;
+    overflow: hidden;
     float: left;
 
     .scheduler-name {
@@ -59,14 +61,6 @@
             color: #DDDDDD;
             background: #555555;
         }
-        /*
-        &:hover {
-            text-decoration: none;
-
-            .ellipsis {
-                display: inline-block;
-            }
-        }*/
     }
 
     .status {
